--- a/index.html
+++ b/index.html
@@ -12,81 +12,77 @@
 </head>
 
 <body>
-    <header class="header center">
-        <div class="logo">
-            <a href="index.html" class="logo__link"><img src="img/logo.svg" alt="logo"></a>
+    <header class="header">
+        <div class="header__logo">
+            <svg xmlns="http://www.w3.org/2000/svg" width="68" height="70" viewBox="0 0 68 70" fill="none">
+                <path
+                    d="M32.8413 5.72651C31.9773 6.01322 31.2951 6.6842 30.994 7.54326L9.18696 69.7652H3.7105C1.43629 69.7652 -0.133714 67.4882 0.674942 65.3626L24.6661 2.3008C25.1931 0.915602 26.521 0 28.0031 0H31.9159C35.2511 0 36.0067 4.67606 32.8413 5.72651ZM53.8197 69.7652C52.0019 69.7652 50.3784 68.6277 49.7577 66.9191L27.9355 6.84758C27.7752 6.40623 27.6879 5.94169 27.677 5.47225L27.6526 4.42202C27.5963 1.99658 29.5471 0 31.9732 0H37.6343C39.3707 0 40.9385 1.03924 41.6147 2.63855L67.4608 63.7603C68.6656 66.6097 66.5739 69.7652 63.4803 69.7652H53.8197ZM34.5482 43.9387C38.8885 43.9387 40.5203 49.6204 36.8414 51.9235L30.9006 55.6427L9.18696 69.7652L11.55 47.7982C11.7862 45.6029 13.6391 43.9387 15.847 43.9387H34.5482Z"
+                    fill="#DFB600" />
+            </svg>
         </div>
-        <nav class="navbar">
-            <a href="#about" class="navbar__link">О нас</a>
-            <a href="#portfolio" class="navbar__link">Портфолио</a>
-            <a href="#services" class="navbar__link">Услуги</a>
+        <nav class="header__navbar">
+            <a href="#about" class="header__link">О нас</a>
+            <a href="#portfolio" class="header__link">Портфолио</a>
+            <a href="#services" class="header__link">Услуги</a>
         </nav>
         <a href="#" class="header__application">Оставить заявку</a>
     </header>
     <section class="application">
-        <div class="application-left">
-            <h1 class="application-left__title text">Дизайн для твоего дома <br> здесь и сейчас</h1>
-            <button class="application-left__btn" type="submit">Оставить заявку</button>
+        <div class="application__left">
+            <h1 class="application__title">Дизайн для твоего дома здесь <br> и сейчас</h1>
+            <button class="application__btn" type="submit">Оставить заявку</button>
         </div>
-        <div class="application-right">
-            <img src="img/title.png" alt="baner">
+        <div class="application__right">
+            <img class="application__baner" src="img/title.png" alt="baner">
         </div>
     </section>
     <section id="about" class="about">
         <h2 class="title">О НАС</h2>
         <div class="about__box">
             <div class="about__box-left">
-                <img src="img/title2.png" alt="baner">
+                <img class="about__baner" src="img/title2.png" alt="baner">
             </div>
             <div class="about__box-right">
-                <p class="about__desc text">Дизайн-студия интерьеров YellowArt разработает <br>
-                    эксклюзивный дизайн интерьера и&nbsp;возьмет <br>
-                    на&nbsp;себя все заботы, связанные с&nbsp;ремонтом.</p>
-                <p class="about__desc  text">Дизайн-проект интерьера от&nbsp;ДЗН включает <br>
-                    не&nbsp;только грамотную планировку, но&nbsp;и <br>
-                    создание благоприятной атмосферы, а&nbsp;также <br>
-                    решение
-                    всех последующих задач, связанных <br>
-                    с&nbsp;реализацией проекта, а&nbsp;именно подбор <br>
-                    и&nbsp;подсчет <br>
-                    всех отделочных материалов и&nbsp;мебели <br>
-                    на&nbsp;ваш бюджет, авторский контроль <br>
-                    за&nbsp;реализацией проекта на&nbsp;стройке, <br>
-                    комплексный качественный ремонт под ключ, <br>
-                    взаимодействие с&nbsp;подрядчиками и&nbsp;многое <br>
-                    другое.</p>
-                <p class="about__desc text">Мы&nbsp;создаем интерьеры для счастливой жизни!</p>
+                <p class="about__desc">Дизайн-студия интерьеров YellowArt разработает эксклюзивный дизайн интерьера
+                    и&nbsp;возьмет на&nbsp;себя все заботы, связанные с&nbsp;ремонтом.</p>
+                <p class="about__desc">Дизайн-проект интерьера от&nbsp;YellowArt включает не&nbsp;только грамотную
+                    планировку, но&nbsp;и&nbsp;создание благоприятной атмосферы, а&nbsp;также решение всех последующих
+                    задач, связанных с&nbsp;реализацией проекта, а&nbsp;именно подбор и&nbsp;подсчет всех отделочных
+                    материалов и&nbsp;мебели на&nbsp;ваш бюджет, авторский контроль за&nbsp;реализацией проекта
+                    на&nbsp;стройке, комплексный качественный ремонт под ключ, взаимодействие с&nbsp;подрядчиками
+                    и&nbsp;многое другое.</p>
+                <p class="about__desc">Мы&nbsp;создаем интерьеры для счастливой жизни!</p>
             </div>
         </div>
     </section>
     <section id="portfolio" class="portfolio">
-        <h2 class="title">ПОРТФОЛИО</h2>
+        <h2 class="portfolio__title title">ПОРТФОЛИО</h2>
         <div class="portfolio__box">
-            <img src="img/portfolio1.png" alt="interior design project photography" class="portfolio__photo">
-            <img src="img/portfolio2.png" alt="interior design project photography" class="portfolio__photo">
-            <img src="img/portfolio3.png" alt="interior design project photography" class="portfolio__photo">
+            <img class="portfolio__photo" src="img/portfolio1.png" alt="interior design project photography">
+            <img class="portfolio__photo" src="img/portfolio2.png" alt="interior design project photography">
+            <img class="portfolio__photo" src="img/portfolio3.png" alt="interior design project photography">
         </div>
     </section>
-    <section class="team text">
-        <h2 class="title">КОМАНДА</h2>
+    <section class="team">
+        <h2 class="team__title title">КОМАНДА</h2>
         <div class="team__flex">
             <figure class="team__box">
                 <img class="team__img" src="img/team_mark.png" alt="photo">
                 <figcaption class="team__name">Марк</figcaption>
             </figure>
-            <figure class="box-team">
+            <figure class="team__box">
                 <img class="team__img" src="img/team_kat.png" alt="photo">
                 <figcaption class="team__name">Катя</figcaption>
             </figure>
-            <figure class="box-team">
+            <figure class="team__box">
                 <img class="team__img" src="img/team_tati.png" alt="photo">
                 <figcaption class="team__name">Таня</figcaption>
             </figure>
-            <figure class="box-team">
+            <figure class="team__box">
                 <img class="team__img" src="img/team_max.png" alt="photo">
                 <figcaption class="team__name">Максим</figcaption>
             </figure>
-            <figure class="box-team">
+            <figure class="team__box">
                 <img class="team__img" src="img/team_nastya.png" alt="photo">
                 <figcaption class="team__name">Настя</figcaption>
             </figure>
@@ -99,34 +95,37 @@
 
     </section>
     <section id="services" class="services">
-        <h2 class="title">УСЛУГИ</h2>
+        <h2 class="services__title title">УСЛУГИ</h2>
         <div class="services__flex">
             <article class="services__box">
                 <img class="services__photo" src="img/bathroom_services.png" alt="interior design project photography">
                 <div class="services__box-info">
-                    <h3 class="services__info text">Дизайн-проект <br> интерьера санузла</h3>
-                    <p class="services__price">От 10000 ₽</p>
+                    <h3 class="services__info">Дизайн-проект <br>
+                        интерьера санузла</h3>
+                    <p class="services__info_price">От 10000 ₽</p>
                 </div>
             </article>
             <article class="services__box">
                 <img class="services__photo" src="img/bedroom_services.png" alt="interior design project photography">
                 <div class="services__box-info">
-                    <h3 class="services__info text">Дизайн-проект <br> интерьера cпальни</h3>
-                    <p class="services__price">От 12000 ₽</p>
+                    <h3 class="services__info">Дизайн-проект <br>
+                        интерьера cпальни</h3>
+                    <p class="services__info_price">От 12000 ₽</p>
                 </div>
             </article>
             <article class="services__box">
                 <img class="services__photo" src="img/kitchen_services.png" alt="interior design project photography">
                 <div class="services__box-info">
-                    <h3 class="services__info text">Дизайн-проект <br> интерьера кухни</h3>
-                    <p class="services__price">От 15000 ₽</p>
+                    <h3 class="services__info">Дизайн-проект <br>
+                        интерьера кухни</h3>
+                    <p class="services__info_price">От 15000 ₽</p>
                 </div>
             </article>
         </div>
     </section>
-    <footer class="footer center text">
-        <div class="contact">
-            <div class="contact__tel">
+    <footer class="footer">
+        <div class="footer__contact">
+            <div class="footer__contact-tel">
                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="39" viewBox="0 0 42 39" fill="none">
                     <path
                         d="M1.52575 1.87461L10.0568 0.0465259C10.9838 -0.151517 11.9353 0.297888 12.3126 1.10529L16.2501 9.63636C16.5946 10.3828 16.3649 11.2588 15.6841 11.7691L10.7131 15.5472C13.6661 21.3894 18.8258 26.2491 25.2487 29.0445L29.3174 24.4286C29.8752 23.7964 30.8103 23.5831 31.6142 23.9031L40.8015 27.5592C41.6792 27.9172 42.1632 28.8008 41.9499 29.6615L39.9812 37.5832C39.7761 38.4059 38.9887 39 38.0617 39C17.0539 39 0 23.1947 0 3.657C0 2.80389 0.63163 2.06504 1.52575 1.87461Z"
@@ -134,15 +133,15 @@
                 </svg>
                 <p class="footer__text">8-800-595-4545</p>
             </div>
-            <div class="contact__schedule">
+            <div class="footer__contact-schedule">
                 <p class="footer__text">График работы:</p>
                 <p class="footer__text">Пн-Пт: 10:00-19:00</p>
                 <p class="footer__text">Сб-Вс: По записи</p>
             </div>
         </div>
-        <div class="socials">
+        <div class="footer__socials">
             <h4 class="footer__text">Мы с соц. сетях:</h4>
-            <nav class="socials__nav">
+            <nav class="footer__socials-nav">
                 <a href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="21" height="41" viewBox="0 0 21 41" fill="none">
                         <g clip-path="url(#clip0_37_230)">
