updated structure html and css

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YellowArt</title>
+    <title>Услуги</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -23,116 +23,13 @@
             </a>
         </div>
         <nav class="header__navbar">
-            <a href="#about" class="header__link">О нас</a>
-            <a href="#portfolio" class="header__link">Портфолио</a>
-            <a href="#services" class="header__link">Услуги</a>
+            <a href="index.html#about" class="header__link">О нас</a>
+            <a href="index.html#portfolio" class="header__link">Портфолио</a>
+            <a href="index.html#services" class="header__link">Услуги</a>
         </nav>
         <a href="#" class="header__application">Оставить заявку</a>
     </header>
-    <section class="application center">
-        <div class="application__left">
-            <h1 class="application__title">Дизайн для твоего дома здесь <br> и сейчас</h1>
-            <button class="application__btn" type="submit">Оставить заявку</button>
-        </div>
-        <div class="application__right">
-            <img class="application__baner baner" src="img/banner1.png" alt="baner">
-        </div>
-    </section>
-    <section id="about" class="about">
-        <h2 class="title">О НАС</h2>
-        <div class="about__box center">
-            <div class="about__box-left">
-                <img class="about__baner baner" src="img/banner2.png" alt="baner">
-            </div>
-            <div class="about__box-right">
-                <p class="about__desc">Дизайн-студия интерьеров YellowArt разработает эксклюзивный дизайн интерьера
-                    и&nbsp;возьмет на&nbsp;себя все заботы, связанные с&nbsp;ремонтом.</p>
-                <p class="about__desc">Дизайн-проект интерьера от&nbsp;YellowArt включает не&nbsp;только грамотную
-                    планировку, но&nbsp;и&nbsp;создание благоприятной атмосферы, а&nbsp;также решение всех последующих
-                    задач, связанных с&nbsp;реализацией проекта, а&nbsp;именно подбор и&nbsp;подсчет всех отделочных
-                    материалов и&nbsp;мебели на&nbsp;ваш бюджет, авторский контроль за&nbsp;реализацией проекта
-                    на&nbsp;стройке, комплексный качественный ремонт под ключ, взаимодействие с&nbsp;подрядчиками
-                    и&nbsp;многое другое.</p>
-                <p class="about__desc">Мы&nbsp;создаем интерьеры для счастливой жизни!</p>
-            </div>
-        </div>
-    </section>
-    <section id="portfolio" class="portfolio">
-        <h2 class="portfolio__title title">ПОРТФОЛИО</h2>
-        <div class="portfolio__box">
-            <img class="portfolio__photo" src="img/portfolio/portfolio1.png" alt="interior design project photography">
-            <img class="portfolio__photo" src="img/portfolio/portfolio2.png" alt="interior design project photography">
-            <img class="portfolio__photo" src="img/portfolio/portfolio3.png" alt="interior design project photography">
-            <img class="portfolio__photo" src="img/portfolio/portfolio4.png" alt="interior design project photography">
-            <img class="portfolio__photo" src="img/portfolio/portfolio5.png" alt="interior design project photography">
-        </div>
-    </section>
-    <section class="team">
-        <h2 class="team__title title">КОМАНДА</h2>
-        <div class="team__flex">
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_mark.png" alt="photo">
-                <figcaption class="team__name">Марк</figcaption>
-            </figure>
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_kat.png" alt="photo">
-                <figcaption class="team__name">Катя</figcaption>
-            </figure>
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_tati.png" alt="photo">
-                <figcaption class="team__name">Таня</figcaption>
-            </figure>
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_max.png" alt="photo">
-                <figcaption class="team__name">Максим</figcaption>
-            </figure>
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_nastya.png" alt="photo">
-                <figcaption class="team__name">Настя</figcaption>
-            </figure>
-        </div>
-        <p class="team__text">
-            Каждый из&nbsp;нас работает над своими продуктами, и&nbsp;все вместе мы&nbsp;развиваемся как единая
-            дизайн-команда со&nbsp;своими ритуалами и&nbsp;большими общими задачами. Постоянно делимся опытом друг
-            с&nbsp;другом, ходим на&nbsp;лекции и&nbsp;сотрудничаем с&nbsp;лидерами российского дизайна.
-        </p>
 
-    </section>
-    <section id="services" class="services">
-        <h2 class="services__title title">УСЛУГИ</h2>
-        <div class="services__flex">
-            <div class="services__flex-box">
-                <article class="services__box">
-                    <img class="services__photo" src="img/services/bathroom_services.png"
-                        alt="interior design project photography">
-                    <div class="services__box-info">
-                        <h3 class="services__info">Дизайн-проект <br>
-                            интерьера санузла</h3>
-                        <p class="services__info_price">От 10000 ₽</p>
-                    </div>
-                </article>
-                <article class="services__box">
-                    <img class="services__photo" src="img/services/bedroom_services.png"
-                        alt="interior design project photography">
-                    <div class="services__box-info">
-                        <h3 class="services__info">Дизайн-проект <br>
-                            интерьера cпальни</h3>
-                        <p class="services__info_price">От 12000 ₽</p>
-                    </div>
-                </article>
-                <article class="services__box">
-                    <img class="services__photo" src="img/services/kitchen_services.png"
-                        alt="interior design project photography">
-                    <div class="services__box-info">
-                        <h3 class="services__info">Дизайн-проект <br>
-                            интерьера кухни</h3>
-                        <p class="services__info_price">От 15000 ₽</p>
-                    </div>
-                </article>
-            </div>
-            <a class="services__details" href="catalog.html">Подробнее...</a>
-        </div>
-    </section>
     <footer class="footer">
         <div class="footer__contact">
             <div class="footer__contact-tel">
@@ -149,6 +46,10 @@
                 <p class="footer__text">Сб-Вс: По записи</p>
             </div>
         </div>
+
+
+
+
         <div class="footer__socials">
             <h4 class="footer__text">Мы с соц. сетях:</h4>
             <nav class="footer__socials-nav">
@@ -197,6 +98,8 @@
             </nav>
         </div>
     </footer>
+
+
 </body>
 
 </html>
