--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="services__box-info">
                         <h3 class="services__info">Дизайн-проект <br>
                             интерьера cпальни</h3>
-                        <p class="services__info_price">От 12000 ₽</p>
+                        <p class="services__info services__info_price">От 12000 ₽</p>
                     </div>
                 </article>
                 <article class="services__box">
@@ -110,7 +110,7 @@
                     </div>
                 </article>
             </div>
-            <a class="services__details" href="catalog.html">Подробнее...</a>
+            <a class="services__details" href="services.html">Подробнее...</a>
         </div>
     </section>
     <footer class="footer">
