--- a/services.html
+++ b/services.html
@@ -30,6 +30,35 @@
         <a href="#" class="header__application">Оставить заявку</a>
     </header>
 
+    <section class="catalog center">
+        <h2 class="title">УСЛУГИ</h2>
+        <div class="catalog__box">
+            <article class="catalog__desc">
+                <img class="catalog__photo" src="img/services/bathroom_services.png"
+                    alt="interior design project photography">
+                <div class="catalog__box-info">
+                    <h3 class="catalog__info">Дизайн-проект <br>
+                        интерьера санузла</h3>
+                    <p class="catalog__info catalog__info_price">От 10000 ₽</p>
+                </div>
+            </article>
+            <div class="catalog__features">
+                <ul class="catalog__ul">
+                    <li class="catalog__info catalog__info_text">Анализ. Важно оценить размер помещений, конструктивные особенности, высоту потолков, местоположение дверных и&nbsp;оконных проемов.</li>
+                    <li class="catalog__info catalog__info_text">Планирование. На&nbsp;этом этапе необходимо рассчитать количество материалов, продумать освещение, подобрать цвета и&nbsp;наметить конструктивные элементы (ниши и&nbsp;перегородки).</li>
+                    <li class="catalog__info catalog__info_text">Выбор стиля. Это решающий этап, который определит концепцию интерьера в&nbsp;целом. От&nbsp;этого будут зависеть цветовые сочетания, выбор материалов и&nbsp;мебели.</li>
+                    <li class="catalog__info catalog__info_text">Подбор и&nbsp;расстановка мебели. Предусмотреть габариты и&nbsp;местоположение мебели важно еще на&nbsp;этапе планирования. От&nbsp;этого параметра зависит функциональность комнаты.</li>
+                    <li class="catalog__info catalog__info_text">Подбор электроники и&nbsp;планирование электрической разводки. Необходимо продумать месторасположение каждой розетки и&nbsp;выключателя так, чтобы это было удобно и&nbsp;функционально.</li>
+                    <li class="catalog__info catalog__info_text">Планирование пола и&nbsp;потолков. Кроме выбора материалов для отделки, необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
+                </ul>
+                <div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    
+
     <footer class="footer">
         <div class="footer__contact">
             <div class="footer__contact-tel">
@@ -46,10 +75,6 @@
                 <p class="footer__text">Сб-Вс: По записи</p>
             </div>
         </div>
-
-
-
-
         <div class="footer__socials">
             <h4 class="footer__text">Мы с соц. сетях:</h4>
             <nav class="footer__socials-nav">
