update class services__flex-box

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="services__box-info">
                         <h3 class="services__info">Дизайн-проект <br>
                             интерьера санузла</h3>
-                        <p class="services__info_price">От 10000 ₽</p>
+                        <p class="services__info services__info_price">От 10000 ₽</p>
                     </div>
                 </article>
                 <article class="services__box">
@@ -106,7 +106,7 @@
                     <div class="services__box-info">
                         <h3 class="services__info">Дизайн-проект <br>
                             интерьера кухни</h3>
-                        <p class="services__info_price">От 15000 ₽</p>
+                        <p class=" services__info services__info_price">От 15000 ₽</p>
                     </div>
                 </article>
             </div>
