--- a/services.html
+++ b/services.html
@@ -32,6 +32,7 @@
 
     <section class="catalog center">
         <h2 class="title">УСЛУГИ</h2>
+        
         <div class="catalog__box">
             <article class="catalog__desc">
                 <img class="catalog__photo" src="img/services/bathroom_services.png"
@@ -51,11 +52,32 @@
                     <li class="catalog__info">Подбор электроники и&nbsp;планирование электрической разводки. Необходимо продумать месторасположение каждой розетки и&nbsp;выключателя так, чтобы это было удобно и&nbsp;функционально.</li>
                     <li class="catalog__info">Планирование пола и&nbsp;потолков. Кроме выбора материалов для отделки, необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
                 </ul>
-                <div>
-
-                </div>
-            </div>
+            <div>
         </div>
+
+        <div class="catalog__box">
+            <article class="catalog__desc">
+                <img class="catalog__photo" src="img/services/bathroom_services.png"
+                    alt="interior design project photography">
+                <div class="catalog__box-info">
+                    <h3 class="catalog__info">Дизайн-проект <br>
+                        интерьера санузла</h3>
+                    <p class="catalog__info catalog__info_price">От 10000 ₽</p>
+                </div>
+            </article>
+            <div class="catalog__features">
+                <ul class="catalog__ul">
+                    <li class="catalog__info">Анализ. Важно оценить размер помещений, конструктивные особенности, высоту потолков, местоположение дверных и&nbsp;оконных проемов.</li>
+                    <li class="catalog__info">Планирование. На&nbsp;этом этапе необходимо рассчитать количество материалов, продумать освещение, подобрать цвета и&nbsp;наметить конструктивные элементы (ниши и&nbsp;перегородки).</li>
+                    <li class="catalog__info">Выбор стиля. Это решающий этап, который определит концепцию интерьера в&nbsp;целом. От&nbsp;этого будут зависеть цветовые сочетания, выбор материалов и&nbsp;мебели.</li>
+                    <li class="catalog__info">Подбор и&nbsp;расстановка мебели. Предусмотреть габариты и&nbsp;местоположение мебели важно еще на&nbsp;этапе планирования. От&nbsp;этого параметра зависит функциональность комнаты.</li>
+                    <li class="catalog__info">Подбор электроники и&nbsp;планирование электрической разводки. Необходимо продумать месторасположение каждой розетки и&nbsp;выключателя так, чтобы это было удобно и&nbsp;функционально.</li>
+                    <li class="catalog__info">Планирование пола и&nbsp;потолков. Кроме выбора материалов для отделки, необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
+                </ul>
+            <div>
+        </div>
+
+
     </section>
     
 
