--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#portfolio" class="header__link">Портфолио</a>
             <a href="#services" class="header__link">Услуги</a>
         </nav>
-        <a href="#" class="header__application">Оставить заявку</a>
+        <a href="#" class="header__btn">Оставить заявку</a>
     </header>
     <section class="application center">
         <div class="application__left">
