--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
             <a href="index.html#portfolio" class="header__link">Портфолио</a>
             <a href="index.html#services" class="header__link">Услуги</a>
         </nav>
-        <a href="#" class="header__application">Оставить заявку</a>
+        <a href="#" class="header__btn">Оставить заявку</a>
     </header>
 
     <section class="catalog center">
@@ -35,8 +35,7 @@
         
         <div class="catalog__box">
             <article class="catalog__desc">
-                <img class="catalog__photo" src="img/services/bathroom_services.png"
-                    alt="interior design project photography">
+                <img class="catalog__photo" src="img/services/bathroom_services.png" alt="interior design project photography">
                 <div class="catalog__box-info">
                     <h3 class="catalog__info">Дизайн-проект <br>
                         интерьера санузла</h3>
@@ -52,19 +51,10 @@
                     <li class="catalog__info">Подбор электроники и&nbsp;планирование электрической разводки. Необходимо продумать месторасположение каждой розетки и&nbsp;выключателя так, чтобы это было удобно и&nbsp;функционально.</li>
                     <li class="catalog__info">Планирование пола и&nbsp;потолков. Кроме выбора материалов для отделки, необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
                 </ul>
-            <div>
+            </div>
         </div>
 
         <div class="catalog__box">
-            <article class="catalog__desc">
-                <img class="catalog__photo" src="img/services/bathroom_services.png"
-                    alt="interior design project photography">
-                <div class="catalog__box-info">
-                    <h3 class="catalog__info">Дизайн-проект <br>
-                        интерьера санузла</h3>
-                    <p class="catalog__info catalog__info_price">От 10000 ₽</p>
-                </div>
-            </article>
             <div class="catalog__features">
                 <ul class="catalog__ul">
                     <li class="catalog__info">Анализ. Важно оценить размер помещений, конструктивные особенности, высоту потолков, местоположение дверных и&nbsp;оконных проемов.</li>
@@ -74,12 +64,17 @@
                     <li class="catalog__info">Подбор электроники и&nbsp;планирование электрической разводки. Необходимо продумать месторасположение каждой розетки и&nbsp;выключателя так, чтобы это было удобно и&nbsp;функционально.</li>
                     <li class="catalog__info">Планирование пола и&nbsp;потолков. Кроме выбора материалов для отделки, необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
                 </ul>
-            <div>
+            </div>
+            <article class="catalog__desc">
+                    <img class="catalog__photo" src="img/services/bathroom_services.png" alt="interior design project photography">
+                    <div class="catalog__box-info">
+                        <h3 class="catalog__info">Дизайн-проект <br>
+                            интерьера санузла</h3>
+                        <p class="catalog__info catalog__info_price">От 10000 ₽</p>
+                    </div>
+            </article>
         </div>
-
-
     </section>
-    
 
     <footer class="footer">
         <div class="footer__contact">
