--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,7 +10,39 @@
     <title>YellowArt</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <section class="team">
+        <h2 class="team__title title">КОМАНДА</h2>
+        <div class="team__flex">
+            <figure class="team__box">
+                <img class="team__img" src="img/team/team_mark.png" alt="photo">
+                <figcaption class="team__name">Марк</figcaption>
+            </figure>
+            <figure class="team__box">
+                <img class="team__img" src="img/team/team_kat.png" alt="photo">
+                <figcaption class="team__name">Катя</figcaption>
+            </figure>
+            <figure class="team__box">
+                <img class="team__img" src="img/team/team_tati.png" alt="photo">
+                <figcaption class="team__name">Таня</figcaption>
+            </figure>
+            <figure class="team__box">
+                <img class="team__img" src="img/team/team_max.png" alt="photo">
+                <figcaption class="team__name">Максим</figcaption>
+            </figure>
+            <figure class="team__box">
+                <img class="team__img" src="img/team/team_nastya.png" alt="photo">
+                <figcaption class="team__name">Настя</figcaption>
+            </figure>
+        </div>
+        <p class="team__text">
+            Каждый из&nbsp;нас работает над своими продуктами, и&nbsp;все вместе мы&nbsp;развиваемся как единая
+            дизайн-команда со&nbsp;своими ритуалами и&nbsp;большими общими задачами. Постоянно делимся опытом друг
+            с&nbsp;другом, ходим на&nbsp;лекции и&nbsp;сотрудничаем с&nbsp;лидерами российского дизайна.
+        </p>
+    </section>
+
 </body>
+
 </html>
