updated section portfolio

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
     <section id="portfolio" class="portfolio">
         <h2 class="portfolio__title title">ПОРТФОЛИО</h2>
-        <div class="portfolio__box">
+        <div class="portfolio__box center">
             <img class="portfolio__photo" src="img/portfolio/portfolio1.png" alt="interior design project photography">
             <img class="portfolio__photo" src="img/portfolio/portfolio2.png" alt="interior design project photography">
             <img class="portfolio__photo" src="img/portfolio/portfolio3.png" alt="interior design project photography">
