--- a/services.html
+++ b/services.html
@@ -66,7 +66,17 @@
             </div>
         </div>
 
-        <div class="catalog__box">
+        <div class="catalog__box catalog__box_position-reverse">
+            <article class="catalog__desc">
+                <img class="catalog__photo" src="img/services/bedroom_services.png"
+                    alt="interior design project photography">
+                <div class="catalog__box-info">
+                    <h3 class="catalog__info catalog__info_size catalog__info_transform">Дизайн-проект <br>
+                        интерьера спальни</h3>
+                    <p class="catalog__info catalog__info_size catalog__info_transform catalog__info_price">От 12000 ₽
+                    </p>
+                </div>
+            </article>
             <div class="catalog__features">
                 <ul class="catalog__ul">
                     <li class="catalog__text">Анализ. Важно оценить размер помещений, конструктивные особенности, высоту
@@ -87,16 +97,6 @@
                         необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
                 </ul>
             </div>
-            <article class="catalog__desc">
-                <img class="catalog__photo" src="img/services/bedroom_services.png"
-                    alt="interior design project photography">
-                <div class="catalog__box-info">
-                    <h3 class="catalog__info catalog__info_size catalog__info_transform">Дизайн-проект <br>
-                        интерьера спальни</h3>
-                    <p class="catalog__info catalog__info_size catalog__info_transform catalog__info_price">От 12000 ₽
-                    </p>
-                </div>
-            </article>
         </div>
     </section>
 
