--- a/test.html
+++ b/test.html
@@ -9,40 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YellowArt</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="script/services.js" async></script>
 </head>
 
 <body>
-    <section class="team">
-        <h2 class="team__title title">КОМАНДА</h2>
-        <div class="team__flex">
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_mark.png" alt="photo">
-                <figcaption class="team__name">Марк</figcaption>
-            </figure>
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_kat.png" alt="photo">
-                <figcaption class="team__name">Катя</figcaption>
-            </figure>
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_tati.png" alt="photo">
-                <figcaption class="team__name">Таня</figcaption>
-            </figure>
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_max.png" alt="photo">
-                <figcaption class="team__name">Максим</figcaption>
-            </figure>
-            <figure class="team__box">
-                <img class="team__img" src="img/team/team_nastya.png" alt="photo">
-                <figcaption class="team__name">Настя</figcaption>
-            </figure>
-        </div>
-        <p class="team__text">
-            Каждый из&nbsp;нас работает над своими продуктами, и&nbsp;все вместе мы&nbsp;развиваемся как единая
-            дизайн-команда со&nbsp;своими ритуалами и&nbsp;большими общими задачами. Постоянно делимся опытом друг
-            с&nbsp;другом, ходим на&nbsp;лекции и&nbsp;сотрудничаем с&nbsp;лидерами российского дизайна.
-        </p>
-    </section>
+    <section class="catalog center">
+        <h2 class="title">УСЛУГИ</h2>
 
+        <div class="catalog__conteiner">
+
+        </div>
+    </section>
 </body>
 
 </html>
