--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
             <a href="index.html#portfolio" class="header__link">Портфолио</a>
             <a href="index.html#services" class="header__link">Услуги</a>
         </nav>
-        <a href="#" class="header__btn">Оставить заявку</a>
+        <a href="call_reques.html" class="header__btn">Оставить заявку</a>
     </header>
 
     <section class="catalog center">
