--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>YellowArt</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="script/team.js" async></script>
+    <script type="module" src="script/list_services.js"></script>
+    <script type="module" src="script/services_main_page.js" async></script>
 </head>
 
 <body>
@@ -80,35 +82,7 @@
     <section id="services" class="services">
         <h2 class="services__title title">УСЛУГИ</h2>
         <div class="services__flex">
-            <div class="services__flex-box">
-                <article class="services__box">
-                    <img class="services__photo" src="img/services/bathroom_services.png"
-                        alt="interior design project photography">
-                    <div class="services__box-info">
-                        <h3 class="services__info">Дизайн-проект <br>
-                            интерьера санузла</h3>
-                        <p class="services__info services__info_price">От 10000 ₽</p>
-                    </div>
-                </article>
-                <article class="services__box">
-                    <img class="services__photo" src="img/services/bedroom_services.png"
-                        alt="interior design project photography">
-                    <div class="services__box-info">
-                        <h3 class="services__info">Дизайн-проект <br>
-                            интерьера cпальни</h3>
-                        <p class="services__info services__info_price">От 12000 ₽</p>
-                    </div>
-                </article>
-                <article class="services__box">
-                    <img class="services__photo" src="img/services/kitchen_services.png"
-                        alt="interior design project photography">
-                    <div class="services__box-info">
-                        <h3 class="services__info">Дизайн-проект <br>
-                            интерьера кухни</h3>
-                        <p class=" services__info services__info_price">От 15000 ₽</p>
-                    </div>
-                </article>
-            </div>
+            <div class="services__flex-box"></div>
             <a class="services__details" href="services.html">Подробнее...</a>
         </div>
     </section>
