--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <title>Услуги</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="script/list_services.js"></script>
-    <script type="module" src="script/services.js" async></script>
+    <script type="module" src="script/services_page.js" async></script>
 </head>
 
 <body>
