--- a/call_reques.html
+++ b/call_reques.html
@@ -32,17 +32,16 @@
     </header>
 
     <section class="call-request">
-        <h2 class="title">Оставить заявку</h2>
-        <div class="call-request__box">
+        <div class="call-request__box kenburns-bottom">
+            <h2 class="call-request__title">Оставить заявку</h2>
             <form class="questionnaire" action="" method="post">
                 <div class="questionnaire__box">
                     <p class="questionnaire__info">Имя</p>
-                    <input class="questionnaire__input" type="text" name="name" placeholder="Ваше имя, фамилия*"
-                        required />
+                    <input class="questionnaire__input" type="text" name="name" placeholder="Ваше имя" required />
                 </div>
                 <div class="questionnaire__box">
                     <p class="questionnaire__info">Телефон</p>
-                    <input class="questionnaire__input" type="tel" name="phone" placeholder="Телефон для связи*"
+                    <input class="questionnaire__input" type="tel" name="phone" placeholder="Телефон для связи"
                         required />
                 </div>
                 <div class="questionnaire__box">
