update call reques, btn back

--- a/call_reques.html
+++ b/call_reques.html
@@ -28,11 +28,11 @@
             <a href="index.html#portfolio" class="header__link">Портфолио</a>
             <a href="index.html#services" class="header__link">Услуги</a>
         </nav>
-        <a href="#" class="header__btn">Оставить заявку</a>
+        <a href="index.html" class="header__btn">Обратно</a>
     </header>
 
     <section class="call-request">
-        <div class="call-request__box kenburns-bottom">
+        <div class="call-request__box">
             <h2 class="call-request__title">Оставить заявку</h2>
             <form class="questionnaire" action="" method="post">
                 <div class="questionnaire__box">
@@ -47,7 +47,7 @@
                 <div class="questionnaire__box">
                     <label for="email" class="questionnaire__info">E-mail</label>
                     <input id="email" class="questionnaire__input" type="email" name="email"
-                        placeholder="Укажите ваш E-mail (для ответа)" />
+                        placeholder="Укажите ваш e-mail (для ответа)" />
                 </div>
                 <input class="questionnaire__submit" type="submit" name="Submit" value="Отправить" />
             </form>
