call reques, update css and reques btn

--- a/call_reques.html
+++ b/call_reques.html
@@ -28,7 +28,11 @@
             <a href="index.html#portfolio" class="header__link">Портфолио</a>
             <a href="index.html#services" class="header__link">Услуги</a>
         </nav>
-        <a href="index.html" class="header__btn">Обратно</a>
+        <div class="header__request-btn">
+        <a href="index.html" class="header__btn"><svg width="59" height="63" viewBox="0 0 59 63" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M9.66205 1.74533C7.45172 -0.581777 3.86807 -0.581777 1.65775 1.74533C-0.552582 4.07244 -0.552582 7.84543 1.65775 10.1725L13.8931 23.0543C18.1537 27.5401 18.1537 34.5772 13.8931 39.0629L1.65793 51.9445C-0.552396 54.2716 -0.552399 58.0446 1.65793 60.3717C3.86826 62.6988 7.45191 62.6988 9.66223 60.3717L21.0728 48.3583C25.6552 43.5338 33.3448 43.5338 37.9272 48.3583L49.3378 60.3717C51.5481 62.6988 55.1318 62.6988 57.3421 60.3717C59.5524 58.0446 59.5524 54.2716 57.3421 51.9445L45.1069 39.0629C40.8463 34.5772 40.8463 27.5401 45.1069 23.0543L57.3423 10.1725C59.5526 7.84543 59.5526 4.07244 57.3423 1.74533C55.132 -0.581777 51.5483 -0.581777 49.338 1.74533L37.9272 13.759C33.3448 18.5835 25.6552 18.5835 21.0728 13.759L9.66205 1.74533Z" fill="#DFB600"/>
+            </svg>
+            </a></div>
     </header>
 
     <section class="call-request">
