--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <a href="#portfolio" class="header__link">Портфолио</a>
             <a href="#services" class="header__link">Услуги</a>
         </nav>
-        <a href="call_reques.html" class="header__btn">Оставить заявку</a>
+        <div class="header__reques-btn">
+        <a href="call_reques.html" class="header__btn">Оставить заявку</a></div>
     </header>
     <section class="application center">
         <div class="application__left">
