call reques, update css and reques btn

--- a/services.html
+++ b/services.html
@@ -29,7 +29,8 @@
             <a href="index.html#portfolio" class="header__link">Портфолио</a>
             <a href="index.html#services" class="header__link">Услуги</a>
         </nav>
-        <a href="call_reques.html" class="header__btn">Оставить заявку</a>
+        <div class="header__reques-btn">
+        <a href="call_reques.html" class="header__btn">Оставить заявку</a></div>
     </header>
 
     <section class="catalog center">
