--- a/call_reques.html
+++ b/call_reques.html
@@ -38,7 +38,7 @@
     <section class="call-request">
         <div class="call-request__box">
             <h2 class="call-request__title">Оставить заявку</h2>
-            <form class="questionnaire" action="" method="post">
+            <form class="questionnaire" action="#" method="post">
                 <div class="questionnaire__box">
                     <label for="name" class="questionnaire__info">Имя</label>
                     <input id="name" class="questionnaire__input" type="text" name="name" placeholder="Укажите ваше имя" required />
@@ -53,7 +53,7 @@
                     <input id="email" class="questionnaire__input" type="email" name="email"
                         placeholder="Укажите ваш e-mail (для ответа)" />
                 </div>
-                <input class="questionnaire__submit" type="submit" name="Submit" value="Отправить" />
+                <button class="questionnaire__submit" type="submit" name="Submit">Отправить</button>
             </form>
         </div>
     </section>
