--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <title>Услуги</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="script/list_services.js"></script>
-    <script type="module" src="script/services_page.js" async></script>
+    <script type="module" src="script/services_page.js"></script>
 </head>
 
 <body>
@@ -30,7 +30,8 @@
             <a href="index.html#services" class="header__link">Услуги</a>
         </nav>
         <div class="header__call-reques-btn">
-        <a href="call_reques.html" class="header__btn">Оставить заявку</a></div>
+            <a href="call_reques.html" class="header__btn">Оставить заявку</a>
+        </div>
     </header>
 
     <section class="catalog center">
