update positions sections application and about, on the call request page, the footer position

--- a/call_reques.html
+++ b/call_reques.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YellowArt</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="script/input_mask.js "></script>
+    <script src="script/input_mask.js" defer></script>
+    <script src="script/test.js" defer></script>
 </head>
 
 <body>
@@ -61,9 +62,10 @@
                 <button class="questionnaire__submit" type="submit" name="Submit">Отправить</button>
             </form>
         </div>
+
     </section>
 
-    <footer class="footer">
+    <footer class="footer center">
         <div class="footer__contact">
             <div class="footer__contact-tel">
                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="39" viewBox="0 0 42 39" fill="none">
