--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <a href="#services" class="header__link">Услуги</a>
         </nav>
         <div class="header__call-reques-btn">
-        <a href="call_reques.html" class="header__btn">Оставить заявку</a></div>
+            <a href="call_reques.html" class="header__btn">Оставить заявку</a>
+        </div>
     </header>
     <section class="application center">
         <div class="application__left">
@@ -42,9 +43,9 @@
             <img class="application__baner baner" src="img/banner1.png" alt="baner">
         </div>
     </section>
-    <section id="about" class="about">
+    <section id="about" class="about center">
         <h2 class="title">О НАС</h2>
-        <div class="about__box center">
+        <div class="about__box">
             <div class="about__box-left">
                 <img class="about__baner baner" src="img/banner2.png" alt="baner">
             </div>
@@ -71,7 +72,7 @@
             <img class="portfolio__photo" src="img/portfolio/portfolio5.png" alt="interior design project photography">
         </div>
     </section>
-    <section class="team">
+    <section class="team center">
         <h2 class="team__title title">КОМАНДА</h2>
         <div class="team__flex"></div>
         <p class="team__text">
@@ -87,7 +88,7 @@
             <a class="services__details" href="services.html">Подробнее...</a>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer center">
         <div class="footer__contact">
             <div class="footer__contact-tel">
                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="39" viewBox="0 0 42 39" fill="none">
