--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
         <div class="catalog__conteiner"></div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer center">
         <div class="footer__contact">
             <div class="footer__contact-tel">
                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="39" viewBox="0 0 42 39" fill="none">
